feat: Use StringUtils